--- a/arxiv/2020_09_arxiv.html
+++ b/arxiv/2020_09_arxiv.html
@@ -211,7 +211,114 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p2"><br></p>
 <p class="p1">20200914</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05055">https://arxiv.org/abs/2009.05055</a></span> Emergent chiral symmetry in a three-dimensional interacting Dirac liquid *** (Bitan Roy)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05119">https://arxiv.org/abs/2009.05119</a></span> Boundary criticality of the O(N) model in d = 3 critically revisited ***** (Max A. Metlitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05119">https://arxiv.org/abs/2009.05119</a></span> Boundary criticality of the O(N) model in d = 3 critically revisited ***** (Max A. Metlitski)</p><br>
+<p class="p1">20200915</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.06507">https://arxiv.org/abs/2009.06507</a></span> Multipole conservation laws and subdiffusion in any dimension *** (Andrew Lucas, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05795">https://arxiv.org/abs/2009.05795</a></span> Photocurrent of exciton polaritons (Takahiro Morimoto, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05577">https://arxiv.org/abs/2009.05577</a></span> Fractons from frustration in hole-doped antiferromagnets (Michael Pretko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05595">https://arxiv.org/abs/2009.05595</a></span> Electron-Phonon Interactions in Flat Band Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05612">https://arxiv.org/abs/2009.05612</a></span> Orbital susceptibility of T-graphene: Interplay of high-order van Hove singularities and Dirac cones</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.05706">https://arxiv.org/abs/2009.05706</a></span> Universality in Non-Equilibrium Quantum Systems</p>
+<p class="p2"><br></p>
+<p class="p1">20200916</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07018">https://arxiv.org/abs/2009.07018</a></span> Magneto-optical conductivity in generic Weyl semimetals *** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07070">https://arxiv.org/abs/2009.07070</a></span> Hunting for the non-Hermitian exceptional points with fidelity susceptibility</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.06644">https://arxiv.org/abs/2009.06644</a></span> Competing nodal d-wave superconductivity and antiferromagnetism: a Quantum Monte Carlo study ** (Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07263">https://arxiv.org/abs/2009.07263</a></span> Z2 Topologically Obstructed Superconducting Order **</p>
+<p class="p3"><a href="https://arxiv.org/abs/2009.06632">https://arxiv.org/abs/2009.06632</a><span class="s2"> Quantum smectic gauge theory **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.06949">https://arxiv.org/abs/2009.06949</a></span> Nodeless s-Wave Superconducting Phases in Cuprates with Ba2CuO3-Type Structure</p>
+<p class="p2"><br></p>
+<p class="p1">20200917</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07483">https://arxiv.org/abs/2009.07483</a></span> Unified Theory of Quantum Crystalline Symmetries **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07621">https://arxiv.org/abs/2009.07621</a></span> Topological mass generation in gapless systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07273">https://arxiv.org/abs/2009.07273</a></span> On Exotic Consistent Anomalies in (1+1)d: A Ghost Story</p>
+<p class="p2"><br></p>
+<p class="p1">20200918</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08195">https://arxiv.org/abs/2009.08195</a></span> Higher-order topology in monolayer graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08284">https://arxiv.org/abs/2009.08284</a></span> Quantum metasurfaces with periodic arrays of Λ-emitters</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07848">https://arxiv.org/abs/2009.07848</a></span> Fate of Lattice Gauge Theories Under Decoherence</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08134">https://arxiv.org/abs/2009.08134</a></span> Interaction induced doublons and embedded topological subspace in a complete flat-band system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07864">https://arxiv.org/abs/2009.07864</a></span> Unlocking of time reversal, space-time inversion and rotation invariants in magnetic materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08124">https://arxiv.org/abs/2009.08124</a></span> Charge Density Waves beyond the Pauli paramagnetic limit in 2D systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07862">https://arxiv.org/abs/2009.07862</a></span> Schwinger boson study of superconductivity mediated by antiferromagnetic spin-fluctuations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08082">https://arxiv.org/abs/2009.08082</a></span> Path integral of neutrino oscillations (Kazuo Fujikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11736">https://arxiv.org/abs/2003.11736</a></span> Topological mass generation and 2−forms</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2008.04077">https://arxiv.org/abs/2008.04077</a></span> On critical models with <i>N </i>≤ 4 scalars in <i>d </i>= 4 − <i>ǫ</i></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08280">https://arxiv.org/abs/2009.08280</a></span> On generalized forces in higher derivative Lagrangian theory</p>
+<p class="p2"><br></p>
+<p class="p1">20200921</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08597">https://arxiv.org/abs/2009.08597</a></span> Shadowed Triplet Pairings in Hund’s Metals with Spin-Orbit Coupling (Hae-Young Kee)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2009.08475">https://arxiv.org/abs/2009.08475</a><span class="s2"> Hall coefficient of semimetals ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.13492">https://arxiv.org/abs/1912.13492</a></span> Categorical symmetry and non-invertible anomaly in symmetry-breaking and topological phase transitions (Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20200922</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09779">https://arxiv.org/abs/2009.09779</a></span> Vielbein with mixed dimensions and gravitational global monopole in the planar phase of superfluid 3He (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09189">https://arxiv.org/abs/2009.09189</a></span> Dynamical characterization of Weyl nodes in Floquet Weyl semimetal phases (Jiangbin Gong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.08993">https://arxiv.org/abs/2009.08993</a></span> Non-diagonal anisotropic quantum Hall states *** (Pok Man Tam, Charles L. Kane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09208">https://arxiv.org/abs/2009.09208</a></span> The quantum Ising chain for beginners</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09621">https://arxiv.org/abs/2009.09621</a></span> Thermal Hall effect from two-dimensional Schwinger-boson gas with Rashba spin-orbit interaction: application to ferromagnets with in-plane Dzyaloshinskii-Moriya interaction (Sungjoon Park, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09877">https://arxiv.org/abs/2009.09877</a></span> Incoherent transport in a model for the strange metal phase</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.09413">https://arxiv.org/abs/2009.09413</a></span> Towards the hidden symmetry in Coulomb interacting twisted bilayer graphene: renormalization group approach ***** (Oskar Vafek, Jian Kang)</p>
+<p class="p2"><br></p>
+<p class="p1">20200923</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10087">https://arxiv.org/abs/2009.10087</a></span> Random Field Ising Model and Parisi-Sourlas Supersymmetry II. Renormalization Group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10719">https://arxiv.org/abs/2009.10719</a></span> Hierarchy of higher-order Floquet topological phases in three dimensions *** (Vladimir Juriˇci ́c, Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10084">https://arxiv.org/abs/2009.10084</a></span> Electron-phonon hydrodynamics (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10287">https://arxiv.org/abs/2009.10287</a></span> Spin-orbital coupled real topological phases (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10104">https://arxiv.org/abs/2009.10104</a></span> Scrambling and Lyapunov Exponent in Unitary Networks with Tunable Interactions (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10076">https://arxiv.org/abs/2009.10076</a></span> Correlated Insulating Phases in the Twisted Bilayer Graphene ** (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10208">https://arxiv.org/abs/2009.10208</a></span> Spin density wave order in interacting type-I and type-II Weyl semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10089">https://arxiv.org/abs/2009.10089</a></span> Impurity induced double transitions for accidentally degenerate unconventional pairing states (Manfred Sigrist)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10362">https://arxiv.org/abs/2009.10362</a></span> Gauge is more than mathematical redundancy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14391">https://arxiv.org/abs/2004.14391</a></span> Deconfined Metal-Insulator Transitions in Quantum Hall Bilayers ***** (Liujun Zou, Debanjan Chowdhury)</p>
+<p class="p2"><br></p>
+<p class="p1">20200924</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11286">https://arxiv.org/abs/2009.11286</a></span> Entanglement Properties of Disordered Quantum Spin Chains with Long-Range Antiferromagnetic Interactions (Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11220">https://arxiv.org/abs/2009.11220</a></span> Floquet generation of Second Order Topological Superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11183">https://arxiv.org/abs/2009.11183</a></span> Biorthogonal quantum criticality in non-Hermitian many-body systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11280">https://arxiv.org/abs/2009.11280</a></span> Specific Heat of a Quantum Critical Metal *** (Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10759">https://arxiv.org/abs/2009.10759</a></span> Chaos exponents of SYK traversable wormholes ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11088">https://arxiv.org/abs/2009.11088</a></span> Gauge Fixing for Strongly Correlated Electrons coupled to Quantum Light</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.10911">https://arxiv.org/abs/2009.10911</a></span> Interplay between superconductivity and non-Fermi liquid at a quantum-critical point in a metal. IV: The γ model and its phase diagram at 1 &lt; γ &lt; 2. ***** (Yi-Ming Wu, Artem Abanov, Andrey V. Chubukov)</p>
+<p class="p2"><br></p>
+<p class="p1">20200925</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11301">https://arxiv.org/abs/2009.11301</a></span> TBG I: Matrix Elements, Approximations, Perturbation Theory and a k · p 2-Band Model for Twisted Bilayer Graphene *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11856">https://arxiv.org/abs/2009.11856</a></span> Cavity-induced quantum spin liquids</p>
+<p class="p2"><br></p>
+<p class="p1">20200928</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11872">https://arxiv.org/abs/2009.11872</a></span> TBG II: Stable Symmetry Anomaly in Twisted Bilayer Graphene *** (Andrei B. Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12058">https://arxiv.org/abs/2009.12058</a></span> Conserved current of nonconserved quantities **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12138">https://arxiv.org/abs/2009.12138</a></span> Fermi arcs and surface criticality in dirty Dirac materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11881">https://arxiv.org/abs/2009.11881</a></span> Entanglement and Complexity of Purification in (1+1)-dimensional free Conformal Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11880">https://arxiv.org/abs/2009.11880</a></span> Constraints on beta functions in field theories ***** (Sung-Sik Lee)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2009.12308">https://arxiv.org/abs/2009.12308</a><span class="s2"> Reduced conformal symmetry</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.11887">https://arxiv.org/abs/2009.11887</a></span> Thermal effects in non-Fermi liquid superconductivity *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12322">https://arxiv.org/abs/2009.12322</a></span> Temperature × Doping Phase Diagram of Cuprate Superconductors **</p>
+<p class="p2"><br></p>
+<p class="p1">20200929</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13392">https://arxiv.org/abs/2009.13392</a></span> Topological Inverse Faraday Effect in Weyl Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12700">https://arxiv.org/abs/2009.12700</a></span> SO(5) non-Fermi liquid in a Coulomb box device *** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12376">https://arxiv.org/abs/2009.12376</a></span> TBG III: Interacting Hamiltonian and Exact Symmetries of Twisted Bilayer Graphene *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12378">https://arxiv.org/abs/2009.12378</a></span> Phonon transmittance of one dimensional quasicrystals (Junmo Jeon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13363">https://arxiv.org/abs/2009.13363</a></span> Non-Hermitian BCS-BEC crossover of Dirac fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13383">https://arxiv.org/abs/2009.13383</a></span> Ising model as a U(1) Lattice Gauge Theory with a θ-term</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12644">https://arxiv.org/abs/2009.12644</a></span> Emergence and Breaking of Duality Symmetry in Thermodynamic Behavior: Repeated Measurements and Macroscopic Limit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.08169">https://arxiv.org/abs/1912.08169</a></span> O(N) Models with Boundary Interactions and their Long Range Generalizations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12790">https://arxiv.org/abs/2009.12790</a></span> Effective-field theory for high-Tc cuprates ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13137">https://arxiv.org/abs/2009.13137</a></span> The background field method and critical vector models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12393">https://arxiv.org/abs/2009.12393</a></span> Valence-Bond Order in a Honeycomb Antiferromagnet Coupled to Quantum Phonons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.12998">https://arxiv.org/abs/2009.12998</a></span> Axion electrodynamics in p + is superconductors ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.00291">https://arxiv.org/abs/2003.00291</a></span> Emergent dual holographic description for interacting Dirac fermions in the large N limit *** (Ki-Seok Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20200930</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13527">https://arxiv.org/abs/2009.13527</a></span> To heat or not to heat: time crystallinity, scars, and finite-size effects in clean Floquet systems (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13530">https://arxiv.org/abs/2009.13530</a></span> TBG IV: Exact Insulator Ground States and Phase Diagram of Twisted Bilayer Graphene *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.14189">https://arxiv.org/abs/2009.14189</a></span> Duality and domain wall dynamics in a twisted Kitaev chain *** (N. P. Armitage)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.14184">https://arxiv.org/abs/2009.14184</a></span> Field theory of higher-order topological crystalline response, generalized global symmetries and elasticity tetrads *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.14159">https://arxiv.org/abs/2009.14159</a></span> Quantum phase transitions in the spin-1 Kitaev-Heisenberg chain</p>
+<p class="p3"><a href="https://arxiv.org/abs/2007.04955">https://arxiv.org/abs/2007.04955</a><span class="s2"> CFT in AdS and boundary RG flows</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13551">https://arxiv.org/abs/2009.13551</a></span> A degeneracy bound for homogeneous topological order *** (Jeongwan Haah)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.13776">https://arxiv.org/abs/2009.13776</a></span> Spectral properties and enhanced superconductivity in renormalized Migdal-Eliashberg theory</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
