--- a/arxiv/2020_10_arxiv.html
+++ b/arxiv/2020_10_arxiv.html
@@ -182,7 +182,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20201012</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.04285">https://arxiv.org/abs/2010.04285</a></span> Photoinduced Dirac semimetal in ZrTe5</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.03276">https://arxiv.org/abs/1905.03276</a></span> Fractionalization and Anomalies in Symmetry-Enriched U(1) Gauge Theories ***** (Liujun Zou, Meng Cheng)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.10391">https://arxiv.org/abs/1911.10391</a></span> Notes on Superconformal Representations in Two Dimensions (Sungjay Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.10391">https://arxiv.org/abs/1911.10391</a></span> Notes on Superconformal Representations in Two Dimensions (Sungjay Lee)</p><br>
+<p class="p1">20201013</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.04731">https://arxiv.org/abs/2010.04731</a></span> Rise and Fall of Non-Fermi Liquid Fixed Points in Multipolar Kondo Problems ***** (Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.05301">https://arxiv.org/abs/2010.05301</a></span> Homotopic Action: A Pathway to Convergent Diagrammatic Theories *** (Aaram J. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.05823">https://arxiv.org/abs/2010.05823</a></span> Massless Particles in Higher Dimensions *** (Steven Weinberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2007.06239">https://arxiv.org/abs/2007.06239</a></span> A LATTICE VERSION OF THE ATIYAH-SINGER INDEX THEOREM</p>
+<p class="p2"><br></p>
+<p class="p1">20201014</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.05947">https://arxiv.org/abs/2010.05947</a></span> Faithful derivation of symmetry indicators: A case study for topological superconductors with time-reversal and inversion symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.05946">https://arxiv.org/abs/2010.05946</a></span> Lattice Collective Modes from a Continuum Model of Magic-Angle Twisted Bilayer Graphene (A. H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.06539">https://arxiv.org/abs/2010.06539</a></span> Tensor field theory with applications to quantum computing</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.06311">https://arxiv.org/abs/2010.06311</a></span> Lattice Abelian-Higgs model with noncompact gauge fields (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.06091">https://arxiv.org/abs/2010.06091</a></span> The superconductor to metal transition in overdoped cuprates ***** (Steven Kivelson, Dung-Hai Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20201015</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.06592">https://arxiv.org/abs/2010.06592</a></span> Quantum operator growth bounds for kicked tops and semiclassical spin chains *** (Andrew Lucas)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2007.08805">https://arxiv.org/abs/2007.08805</a><span class="s2"> Fundamental Scale Invariance</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07124">https://arxiv.org/abs/2010.07124</a></span> Massless particles in five and higher dimensions</p>
+<p class="p2"><br></p>
+<p class="p1">20201016</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07928">https://arxiv.org/abs/2010.07928</a></span> Weak-field Hall Resistivity and Spin/Valley Flavor Symmetry Breaking in MAtBG (A. H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07338">https://arxiv.org/abs/2010.07338</a></span> Gauge-Symmetry Violation Quantum Phase Transition in Lattice Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07423">https://arxiv.org/abs/2010.07423</a></span> An exactly solvable ansatz for statistical mechanics models (Isaac H. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07424">https://arxiv.org/abs/2010.07424</a></span> Entropy scaling law and the quantum marginal problem (Isaac H. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07917">https://arxiv.org/abs/2010.07917</a></span> One-dimensional model for deconfined criticality with Z3 × Z3 symmetry</p>
+<p class="p2"><br></p>
+<p class="p1">20201019</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.07947">https://arxiv.org/abs/2010.07947</a></span> Spectroscopic fingerprints of gapped quantum spin liquids, both conventional and fractonic ***** (Rahul M. Nandkishore, Wonjune Choi, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.08307">https://arxiv.org/abs/2010.08307</a></span> The open supersymmetric Haldane–Shastry spin chain and its associated motifs<br>
+<a href="https://arxiv.org/abs/2010.07945"><span class="s1">https://arxiv.org/abs/2010.07945</span></a> Theory of Anomalous Floquet Higher-Order Topology: Classification, Characterization, and Bulk-Boundary Correspondence </p>
+<p class="p2"><br></p>
+<p class="p1">20201020</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.08589">https://arxiv.org/abs/2010.08589</a></span> THz range Faraday rotation in the Weyl Semimetal Candidate Co2TiGe (N. Peter Armitage)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09244">https://arxiv.org/abs/2010.09244</a></span> Twisted boundary condition and Lieb-Schultz-Mattis ingappability for discrete symmetries ***** (Yuan Yao, Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09412">https://arxiv.org/abs/2010.09412</a></span> Berezinskii-Kosterlitz-Thouless transitions in two-dimensional lattice SO(Nc) gauge theories with two scalar flavors (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.08564">https://arxiv.org/abs/2010.08564</a></span> Review of experiments on the chiral anomaly in Dirac-Weyl semimetals *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09234">https://arxiv.org/abs/2010.09234</a></span> Novel Jeff=3/2 Metallic Phase and Unconventional Superconductivity in GaTa4Se8 *** (Min Yong Jeong, Ara Go, Myung Joon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09653">https://arxiv.org/abs/2010.09653</a></span> Quantum oscillations in the activated conductivity in excitonic insulators: possible application to monolayer WTe2 (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.08839">https://arxiv.org/abs/2010.08839</a></span> General Relativity from Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06019">https://arxiv.org/abs/2006.06019</a></span> Traversable wormhole and Hawking-Page transition in coupled complex SYK models (Marcel Franz)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
