--- a/arxiv/2020_10_arxiv.html
+++ b/arxiv/2020_10_arxiv.html
@@ -221,7 +221,55 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09234">https://arxiv.org/abs/2010.09234</a></span> Novel Jeff=3/2 Metallic Phase and Unconventional Superconductivity in GaTa4Se8 *** (Min Yong Jeong, Ara Go, Myung Joon Han)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.09653">https://arxiv.org/abs/2010.09653</a></span> Quantum oscillations in the activated conductivity in excitonic insulators: possible application to monolayer WTe2 (Patrick A. Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2010.08839">https://arxiv.org/abs/2010.08839</a></span> General Relativity from Quantum Field Theory</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06019">https://arxiv.org/abs/2006.06019</a></span> Traversable wormhole and Hawking-Page transition in coupled complex SYK models (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.06019">https://arxiv.org/abs/2006.06019</a></span> Traversable wormhole and Hawking-Page transition in coupled complex SYK models (Marcel Franz)</p><br>
+<p class="p1">20201021</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.09757.pdf">https://arxiv.org/pdf/2010.09757.pdf</a></span> A multicritical Landau-Potts field theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.09728.pdf">https://arxiv.org/pdf/2010.09728.pdf</a></span> Fractional Chiral Hinge Insulator *** (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.09742.pdf">https://arxiv.org/pdf/2010.09742.pdf</a></span> Excitation spectra of quantum matter without quasiparticles I: Sachdev-Ye-Kitaev models ***** (Haoyu Guo, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.09826.pdf">https://arxiv.org/pdf/2010.09826.pdf</a></span> Lattice contribution to the unconventional charge density wave transition in 2H-NbSe2: a non-equilibrium optical approach ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10067.pdf">https://arxiv.org/pdf/2010.10067.pdf</a></span> Chern-Simons superconductors and their instabilities ***</p>
+<p class="p2"><br></p>
+<p class="p1">20201022</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10963.pdf">https://arxiv.org/pdf/2010.10963.pdf</a></span> Fermion-fermion interaction driven instability and criticality of quadratic band crossing systems on the kagom ́e lattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10536.pdf">https://arxiv.org/pdf/2010.10536.pdf</a></span> Topological correspondence between magnetic space group representations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10523.pdf">https://arxiv.org/pdf/2010.10523.pdf</a></span> Strange metals as ersatz Fermi liquids *** (Dominic V. Else, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.11129.pdf">https://arxiv.org/pdf/2010.11129.pdf</a></span> Deconfined Quantum Phase Transition of a Higher-Order Symmetry-Protected Topological State</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10545.pdf">https://arxiv.org/pdf/2010.10545.pdf</a></span> Dirac Fast Scramblers ***** (Jaewon Kim, Ehud Altman, Xiangyu Cao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10271.pdf">https://arxiv.org/pdf/2010.10271.pdf</a></span> An Ahistorical Approach to Elementary Physics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.10243.pdf">https://arxiv.org/pdf/2010.10243.pdf</a></span> Hartree–Fock &amp; Density Functional Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20201023</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.11233.pdf">https://arxiv.org/pdf/2010.11233.pdf</a></span> Spontaneous Chiral-Spin Ordering in Spin-Orbit Coupled Honeycomb Magnets (Hae-Young Kee)</p>
+<p class="p2"><br></p>
+<p class="p1">20201026</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.11952.pdf">https://arxiv.org/pdf/2010.11952.pdf</a></span> Anomalous and normal dislocation modes in Floquet topological insulators *** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.12053.pdf">https://arxiv.org/pdf/2010.12053.pdf</a></span> Topological Invariants of a Filling-Enforced Quantum Band Insulator *** (Ashvin Vishwanath, Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.12085.pdf">https://arxiv.org/pdf/2010.12085.pdf</a></span> Quantum Oscillations in a Spin-3/2 Topological Semimetal *** (Junhyun Lee)</p>
+<p class="p3"><a href="https://arxiv.org/pdf/2010.12475.pdf">https://arxiv.org/pdf/2010.12475.pdf</a><span class="s2"> Spontaneous Symmetry Breaking<span class="Apple-converted-space"> </span></span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1903.09028.pdf">https://arxiv.org/pdf/1903.09028.pdf</a></span> Constraints on order and disorder parameters in quantum spin chains (Michael Levin)</p>
+<p class="p2"><br></p>
+<p class="p1">20201027</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.13592.pdf">https://arxiv.org/pdf/2010.13592.pdf</a></span> Quantum thermal transport in the Schwarzian regime of the SYK model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.13095.pdf">https://arxiv.org/pdf/2010.13095.pdf</a></span> Anomalous Hall conductivity of the holographic Z2 Dirac semimetals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.12588.pdf">https://arxiv.org/pdf/2010.12588.pdf</a></span> Nematic Antiferromagnetism and Deconfined Criticality from the Interplay between Electron-Phonon and Electron-Electron Interactions (Yoni Schattner, Steven A. Kivelson)</p>
+<p class="p2"><br></p>
+<p class="p1">20201028</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.13999.pdf">https://arxiv.org/pdf/2010.13999.pdf</a></span> Thermodynamic approach to electric quadrupole moments *** (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.13803.pdf">https://arxiv.org/pdf/2010.13803.pdf</a></span> Symmetry-protected sign problem and magic in quantum phases of matter **** (Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.13994">https://arxiv.org/pdf/2010.13994</a></span> Comparison between RG-based emergent dual holography and string-based holographic duality *** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.14126.pdf">https://arxiv.org/pdf/2010.14126.pdf</a></span> Exceptional Symmetry of G2 in Spin-3 Fermion Systems *** (Congjun Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.14347.pdf">https://arxiv.org/pdf/2010.14347.pdf</a></span> Gravitational Dyonic Amplitude at One-Loop and its Inconsistency with the Classical Impulse (Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2009.04692.pdf">https://arxiv.org/pdf/2009.04692.pdf</a></span> General anomaly matching by Goldstone bosons<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20201029</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.14511.pdf">https://arxiv.org/pdf/2010.14511.pdf</a></span> Flux crystals, Majorana metals, and flat bands in exactly solvable spin-orbital liquids (Lukas Janssen, Matthias Vojta)</p>
+<p class="p2"><br></p>
+<p class="p1">20201030</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.15630.pdf">https://arxiv.org/pdf/2010.15630.pdf</a></span> Critical Behavior and Universal Signature of an Axion Insulator State<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.15148.pdf">https://arxiv.org/pdf/2010.15148.pdf</a></span> Fractonic topological phases from coupled wires (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.15806.pdf">https://arxiv.org/pdf/2010.15806.pdf</a></span> Renormalization Group Improvement of the Effective Potential: an EFT Approach ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.15790.pdf">https://arxiv.org/pdf/2010.15790.pdf</a></span> Non-Hermitian Yukawa interactions of fermions with axions: potential microscopic origin and dynamical mass generation<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2010.15737.pdf">https://arxiv.org/pdf/2010.15737.pdf</a></span> Entanglement entropy and edge modes in topological string theory: I ***** (Manki Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
