--- a/index.html
+++ b/index.html
@@ -144,11 +144,23 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> Academic Affiliations </div>
 		<ul><div>
+		<li><span class="cvitem"> Department of Physics, University of Toronto </span>
+		<span class="cvperiod">November 2020 ~ Present</span>
+		</div>
+		<div class="cvitemcontent"> Postdoctoral Fellow </div>	
+		</li></ul>
+		<ul><div>
+		<li><span class="cvitem"> School of Computational Sciences, KIAS </span>
+		<span class="cvperiod">August 2020 ~ October 2020</span>
+		</div>
+		<div class="cvitemcontent"> Visiting Scholar </div>	
+		</li></ul>
+		<ul><div>
 		<li><span class="cvitem"> Department of Physics, KAIST </span>
-		<span class="cvperiod">March 2013 ~ Present</span>
+		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program </div>	
-		</li></ul>	
+		</li></ul>
 	</div>
 <!-- Education --><br>
 	<div>
@@ -156,9 +168,11 @@ Articles related to my works:
 		<ul>
 		<li><div>
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
-		<span class="cvperiod">March 2013 ~ Present</span>
+		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
-		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics (Expected graduation date: August 2020)</div>
+		<div class="cvitemcontent"> Doctor of Philosophy in Physics</div>
+		<div class="cvitemcontent"> Thesis Adviosr: Prof. Eun-Gook Moon</div>
+		<div class="cvitemcontent"> Thesis: Renormalization group study on Strongly correlated system</div>
 		<!--<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>-->
 		</li><li>
 		<div>
