--- a/titlecontent.html
+++ b/titlecontent.html
@@ -111,9 +111,9 @@ a:hover {text-decoration: underline; color: darkgray;}
 
 <div id="center">
 <div id="titlecontent">
-<span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
-<a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
-<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>
+<span class="cvitemcontent">e-mail: se.han at utoronto.ca<br>
+<a href="https://www.physics.utoronto.ca">Department of Physics</a><br>
+<a href="https://www.utoronto.ca">University of Toronto (U of T)</a></span></div>
 </div>
 </body>
 </html>
