--- a/arxiv/2020_11_arxiv.html
+++ b/arxiv/2020_11_arxiv.html
@@ -277,7 +277,12 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12951">https://arxiv.org/abs/2011.12951</a></span> Evidence for freezing of charge degrees of freedom across a critical point in CeCoIn5 ** (James G. Analytis)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12671">https://arxiv.org/abs/2011.12671</a></span> Sidney Coleman’s Dirac Lecture “Quantum Mechanics in Your Face” ***** (Sidney Coleman)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12335">https://arxiv.org/abs/2011.12335</a></span> TWELVE TALES IN MATHEMATICAL PHYSICS: EXPANDED HEINEMANN PRIZE LECTURE ***** (BARRY SIMON)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12949">https://arxiv.org/abs/2011.12949</a></span> Origin and Limit of the Recovery of Damaged Information by Time Reversal (Xiangyu Cao, Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12949">https://arxiv.org/abs/2011.12949</a></span> Origin and Limit of the Recovery of Damaged Information by Time Reversal (Xiangyu Cao, Thomas Scaffidi)</p><br>
+<p class="p1">20201130</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12989">https://arxiv.org/abs/2011.12989</a></span> Effective Floquet model for minimally twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12962">https://arxiv.org/abs/2011.12962</a></span> Four coupled SYK models and Nearly AdS2 gravities: Phase Transitions in Traversable wormholes and in Braket wormholes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13488">https://arxiv.org/abs/2011.13488</a></span> Chapter 1 Thirty Years of Composite Fermions and Beyond *** (J. K. Jain)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension ** (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
