--- a/arxiv/2020_12_arxiv.html
+++ b/arxiv/2020_12_arxiv.html
@@ -153,7 +153,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20201204</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.01447">https://arxiv.org/abs/2012.01447</a></span> Relevance in the Renormalization Group and in Information Theory ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.01601">https://arxiv.org/abs/2012.01601</a></span> Quantum Annealed Criticality: A Scaling Description ***** (Premala Chandra, Piers Coleman, Mucio A. Continentino, Gilbert G. Lonzarich)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.01620">https://arxiv.org/abs/2012.01620</a></span> An obstacle to sub-AdS holography for SYK-like models ***** (Pengfei Zhang, Yingfei Gu, Alexei Kitaev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.01620">https://arxiv.org/abs/2012.01620</a></span> An obstacle to sub-AdS holography for SYK-like models ***** (Pengfei Zhang, Yingfei Gu, Alexei Kitaev)</p><br>
+<p class="p1">20201207</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02783">https://arxiv.org/abs/2012.02783</a></span> Six-dimensional time-space crystals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02208">https://arxiv.org/abs/2012.02208</a></span> Fractonic gauge theory of smectics *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02222">https://arxiv.org/abs/2012.02222</a></span> Anyonic Partial Transpose I: Quantum Information Aspects ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02764">https://arxiv.org/abs/2012.02764</a></span> Nickelate superconductors: an ongoing dialog between theory and experiments</p>
+<p class="p2"><br></p>
+<p class="p1">20201208</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.02923">https://arxiv.org/abs/2012.02923</a></span> Inhomogeneous Kondo destruction by RKKY correlations ***** (Iksu Jang, Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03884">https://arxiv.org/abs/2012.03884</a></span> Correlations of quantum curvature and variance of Chern numbers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03875">https://arxiv.org/abs/2012.03875</a></span> Graphene plasmon-phonon coupled modes at the exceptional point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03444">https://arxiv.org/abs/2012.03444</a></span> Topological chiral spin liquids and competing states in triangular lattice SU(<i>N</i>) Mott insulators (Gang Chen)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2012.03644">https://arxiv.org/abs/2012.03644</a><span class="s2"> Topology in quasicrystals</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03382">https://arxiv.org/abs/2012.03382</a></span> Unveiling the phase diagram of a bond-alternating spin-1/2 K-Γ chain ** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03851">https://arxiv.org/abs/2012.03851</a></span> Active Learning in a Graduate Quantum Field Theory Course</p>
+<p class="p2"><br></p>
+<p class="p1">20201209</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04279">https://arxiv.org/abs/2012.04279</a></span> Singular Flat Bands ***** (Jun-Won Rhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04513">https://arxiv.org/abs/2012.04513</a></span> Correlated electrons in a Crystalline Topological insulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.03976">https://arxiv.org/abs/2012.03976</a></span> Categorical Symmetries at Criticality ***** (Xiao-Chuan Wu, Wenjie Ji, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.14613">https://arxiv.org/abs/2009.14613</a></span> A GROUP-THEORIST’S PERSPECTIVE ON SYMMETRY GROUPS IN PHYSICS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.09491">https://arxiv.org/abs/2011.09491</a></span> Floquet Conformal Field Theories with generally deformed Hamiltonians *** (Yingfei Gu, Ashvin Vishwanath, Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04180">https://arxiv.org/abs/2012.04180</a></span> Topological features of ground states and topological solitons in generalized Su-Schrieffer-Heeger models using generalized time-reversal, particle-hole, and chiral symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04621">https://arxiv.org/abs/2012.04621</a></span> Supersymmetric boundaries of one-dimensional phases of fermions beyond SPTs ***** (Minyoung You)</p>
+<p class="p2"><br></p>
+<p class="p1">20201210</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04666">https://arxiv.org/abs/2012.04666</a></span> Criticality and entanglement in non-unitary quantum circuits and tensor networks of non-interacting fermions *** (Chao-Ming Jian, Andreas W. W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04653">https://arxiv.org/abs/2012.04653</a></span> Hydrodynamic sound and plasmons in three dimensions (Shao-Kai Jian, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05024">https://arxiv.org/abs/2012.05024</a></span> Microscopic origin of the competition between charge density waves and enhanced superconductivity in Ba(Ni,Co)2(As,P)2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05235">https://arxiv.org/abs/2012.05235</a></span> Z2 lattice gauge theories and Kitaev’s toric code: A scheme for analog quantum simulation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.04929">https://arxiv.org/abs/2012.04929</a></span> Frustration-free Hamiltonian with Topological Order on Graphs *** (Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05232">https://arxiv.org/abs/2012.05232</a></span> Gauge equivariant neural networks for quantum lattice gauge theories</p>
+<p class="p2"><br></p>
+<p class="p1">20201211</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05308">https://arxiv.org/abs/2012.05308</a></span> Tutorial: Dirac Equation Perspective on Higher-Order Topological Insulators *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05379">https://arxiv.org/abs/2012.05379</a></span> Double-trace deformation in Keldysh field theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05244">https://arxiv.org/abs/2012.05244</a></span> Boundary topological entanglement entropy in two and three dimensions ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.12320">https://arxiv.org/abs/2011.12320</a></span> Boundary supersymmetry of 1+1 d fermionic SPT phases ***** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2011.13921">https://arxiv.org/abs/2011.13921</a></span> Unwinding Fermionic SPT Phases: Supersymmetry Extension ***** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.05617">https://arxiv.org/abs/2012.05617</a></span> A Natural Introduction to Fine-Tuning **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
